change pom for correct compile and run; add migration examples; remove useless params from migrate command;